--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
       <div class="user-projects">
         <div class="images-right">
           <picture>
-            <source type="image/webp" srcset="./assets/img/webp/Perpetual-Crusades.webp" alt="Personal Website" />
-            <img alt="Personal Website" src="./assets/img/jpg/Personal-Resume-Website.png" />
+            <source type="image/webp" srcset="./assets/img/jpg/digadiga.png" alt="Personal Website" />
+            <img alt="Personal Website" src="./assets/img/jpg/digadiga.png" />
           </picture>
         </div>
         <div class="contents" style="text-align: center">
@@ -170,7 +170,7 @@
       </div>
 
       <!-- User Project #2: Summer 2020 Project -->
-      <div class="user-projects">
+<!--       <div class="user-projects">
         <div class="images-left">
           <picture>
             <source type="image/webp" srcset="./assets/img/webp/Perpetual-Crusades.webp" alt="Perpetual Crusades" />
@@ -203,10 +203,10 @@
             >Check it out!</a
           >
         </div>
-      </div>
+      </div> -->
 
       <!-- User Project #3: COVID-19 Tracker App -->
-      <div class="user-projects">
+<!--       <div class="user-projects">
         <div class="images-right">
           <picture>
             <source type="image/webp" srcset="./assets/img/webp/COVID19-Tracker-App.webp" alt="COVID-19 Tracker App" />
@@ -232,10 +232,10 @@
             Check it out!
           </a>
         </div>
-      </div>
+      </div> -->
 
       <!-- Use Project #4: Valuto: Account Management System -->
-      <div class="user-projects">
+<!--       <div class="user-projects">
         <div class="images-left">
           <picture>
             <source
@@ -266,7 +266,7 @@
             Check it out!
           </a>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <footer class="footer">
