--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
             />
           </div>
           <p style="text-align: justify">
-            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to showcase my web
-            presence, story, work experience, education, projects, and achievements in an interactive and
-            visually-appealing format.
+            I developed and designed a website using HTML,CSS and JavaScript, hosted on Github Pages, to showcase my web
+            presence.
           </p>
           <a class="project-link" target="_blank" href="https://www.adityavsingh.com/">Check it out!</a>
         </div>
