--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
           />
         </picture>
         <p>
-          Entry-level —-; I'm a Business IT student who will graduate the following year, 2024. I'm Migrating from the hospitality area to the information technology area.
-          I'm an experienced leader, offering extensive knowledge of hospitality, etiquette and customer service. Professional, organised, offering five years' experience in the food service industry, managing people. Detail-orientated with solid time management skills and the ability to learn new tasks quickly. Effective on decision-making creates a positive environment where the team can thrive and succeed.
-          I am interested in exploring the fields of Software Engineering, Full-Stack, Front and Back End. I am open to opportunities for the same.
+          Hi, Folks ---- As a current student in a Bachelor of Arts (Honours) in Business Studies with an IT specialism and additional coursework in Full Stack Development, I am eager to combine my education and skills to make a valuable impact in the technology industry.
+
+          My Bachelor's degree in Business Studies with an IT specialism is equipping me with a solid understanding of business concepts, including management, finance, and marketing, as well as an understanding of information systems and how they can be used to support business objectives.
+
+          In my Full Stack Development coursework, I am gaining proficiency in both Front End and Back End aspects of web development. I have developed my skills in languages such as HTML, CSS, and JavaScript, as well as DOM, jQuery, Responsiveness, Bootstrap, API consumption and Web Accessibility for the Front End. On the Back End, I am gaining skills in technologies like Recursive algorithms, Data structure, Node.Js & Express, Mongo DB, Login Authentication, APIs integration, Libraries & Frameworks and React, as well as programming languages such as Python and PHP. 
+          Through various projects and assignments, I am gaining practical experience in developing applications, working with data structures and algorithms, and applying best practices in software development.
+
+          Overall, my combined education in Business Studies with an IT specialism and Full Stack Development is equipping me with a diverse skill set that can add value to any organization seeking an innovative and versatile developer. I am excited to leverage my knowledge and skills to develop solutions that meet business objectives and positively impact the world of technology.
         </p>
       </div>
 
