--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@
             />
           </div>
           <p style="text-align: justify">
-            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to showcase my web
-            presence, story, work experience, education, projects, and achievements in an interactive and
-            visually-appealing format.
+            I developed and designed this landing page website using HTML, CSS and JavaScript, hosted on Github Pages, to showcase my 
+            web presence, story, work experience, education, projects, and achievements in an interactive and visually-appealing format.
           </p>
           <a class="project-link" target="_blank" href="https://tiagoluis12.github.io/digadiga/">Check it out!</a>
         </div>
