--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
           />
         </picture>
         <p>
-          Hi, Folks ---- As a current student in a Bachelor of Arts (Honours) in Business Studies with an IT specialism and additional coursework in Full Stack Development, I am eager to combine my education and skills to make a valuable impact in the technology industry.
-
-          Overall, my combined education in Business Studies with an IT specialism and Full Stack Development is equipping me with a diverse skill set that can add value to any organization seeking an innovative and versatile developer. 
-          I am excited to leverage my knowledge and skills to develop solutions that meet business objectives and positively impact the world of technology.
+          Entry-level —-; I'm a Business IT student who will graduate the following year, 2024. I'm Migrating from the hospitality area to the information technology area.
+          I'm an experienced leader, offering extensive knowledge of hospitality, etiquette and customer service. Professional, organised, offering five years' experience in the food service industry, managing people. Detail-orientated with solid time management skills and the ability to learn new tasks quickly. Effective on decision-making creates a positive environment where the team can thrive and succeed.
+          I am interested in exploring the fields of Software Engineering, Full-Stack, Front and Back End. I am open to opportunities for the same.
         </p>
       </div>
 
@@ -119,16 +118,16 @@
         <h1>Featured Projects</h1>
       </div>
 
-      <!-- User Project #1: Personal Résumé Website -->
+      <!-- Project #1: Diga Diga -->
       <div class="user-projects">
         <div class="images-right">
           <picture>
-            <source type="image/webp" srcset="./assets/img/jpg/digadiga.png" alt="Personal Website" />
-            <img alt="Personal Website" src="./assets/img/jpg/digadiga.png" />
+            <source type="image/webp" srcset="./assets/img/jpg/digadiga.png" alt="Diga Diga Website" />
+            <img alt="Diga Diga Website" src="./assets/img/jpg/digadiga.png" />
           </picture>
         </div>
         <div class="contents" style="text-align: center">
-          <h3>Personal Website</h3>
+          <h3>Diga Diga Website</h3>
           <div>
             <img
               height="32"
@@ -149,48 +148,53 @@
             />
           </div>
           <p style="text-align: justify">
-            I developed and designed this landing page website using HTML, CSS and JavaScript, hosted on Github Pages, to showcase my 
-            web presence, story, work experience, education, projects, and achievements in an interactive and visually-appealing format.
+            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to showcase my web
+            presence, story, work experience, education, projects, and achievements in an interactive and
+            visually-appealing format.
           </p>
           <a class="project-link" target="_blank" href="https://tiagoluis12.github.io/digadiga/">Check it out!</a>
         </div>
       </div>
 
-      <!-- User Project #2: Summer 2020 Project -->
-      <!-- <div class="user-projects">
+      <!-- Project #2: Wacom Bamboo Tablet -->
+       <div class="user-projects">
         <div class="images-left">
           <picture>
-            <source type="image/webp" srcset="./assets/img/webp/Perpetual-Crusades.webp" alt="Perpetual Crusades" />
-            <img alt="Perpetual Crusades" src="./assets/img/jpg/Perpetual-Crusades.jpg" />
+            <source type="image/webp" srcset="./assets/img/webp/bamboo.png" alt="Wacom Bamboo Tablet" />
+            <img alt="Wacom Bamboo Tablet" src="./assets/img/jpg/bamboo.png" />
           </picture>
         </div>
         <div class="contents-right" style="text-align: center">
-          <h3>Perpetual Crusades</h3>
+          <h3>Wacom Bamboo Tablet</h3>
           <img
             height="32"
             width="32"
-            src="https://unpkg.com/simple-icons@3.4.0/icons/react.svg"
+            src="https://unpkg.com/simple-icons@3.4.0/icons/html5.svg"
             style="filter: invert(73%) sepia(74%) saturate(1552%) hue-rotate(169deg) brightness(109%) contrast(97%)"
           />
           &nbsp;
           <img
             height="32"
             width="32"
-            src="https://unpkg.com/simple-icons@3.4.0/icons/css3.svg"
-            style="filter: invert(33%) sepia(29%) saturate(3844%) hue-rotate(184deg) brightness(90%) contrast(84%)"
-          />
+            src="https://unpkg.com/simple-icons@3.4.0/icons/javascript.svg"
+            style="filter: invert(24%) sepia(14%) saturate(2270%) hue-rotate(222deg) brightness(102%) contrast(90%)"
+            />
           &nbsp;
-          <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/github.svg" />
+          <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/jquery.svg" />
+          &nbsp;
+          <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/css3.svg" 
+          style="filter: invert(33%) sepia(29%) saturate(3844%) hue-rotate(184deg) brightness(90%) contrast(84%)"
+          />
           <p style="text-align: justify">
-            I created a two-player online dice-based board game with a theme loosely set around Dungeons & Dragons. It
-            was developed as a submission for Penn Apps XXI, using ReactJS and CSS Grid Layouts for design and hosted on
-            GitHub Pages.
+            This project was developed based on the knowledge acquired in the JavaScript journey.
+
+            I Used HTML, CSS, JavaScript and DOM jquery—a project hosted on GitHub Pages.
           </p>
-          <a class="project-link" target="_blank" href="https://github.com/AVS1508/Summer-2020-Project"
+          <a class="project-link" target="_blank" href="tiagoluis12.github.io/hands-on-js-tera/"
             >Check it out!</a
           >
         </div>
-      </div> -->
+      </div>
 
       <!-- User Project #3: COVID-19 Tracker App -->
       <!-- <div class="user-projects">
